--- a/index.html
+++ b/index.html
@@ -2,10 +2,116 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Colmar Academy</title>
+      <link rel="stylesheet" type="text/css" href="C:\Users\212024173\Projects\capstone\resources\css\font-awesome.css">
+
       <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+  <header>
+    <div class="logo">
+      <img src=".\resources\images\ic-logo.svg">
+      <span id="colmar">COLMAR</span>
+      <span id="academy">ACADEMY </span>
+    </div>
+    <nav >
+      <a class="fade" href="#on-campus">On Campus</a>
+      <a class="fade" href="#online">Online</a>
+      <a class="fade" href="#for-companies">For companies</a>
+      <a class="fade" href="#sign-in">Sign in</a>
+
+      <div class="mobile-nav">
+        <img class="fade" src=".\resources\images\ic-on-campus.svg">
+        <img class="fade" src=".\resources\images\ic-online.svg">
+        <img class="fade" src=".\resources\images\ic-login.svg">
+      </div>
+    </nav>
+  </header>
+
+  <main>
+    <div class="banner">
+      <div class="learn-img-container">
+        <img src=".\resources\images\banner.jpg">
+      </div>
+        <div class="right-side">
+          <h1>Learn something new everyday</h1>
+          <h2>Lorem ipsum dolor site amet, consectetur adipiscing elit.</h2>
+          <div class="start-button fade">
+            <h4>Start here</h4>
+          </div>
+        </div>
+    </div>
+
+
+    <div class="practicing">
+      <div class="practice-left">
+          <img src=".\resources\images\information-main.jpg">
+          <h1>It doesn't hurt to keep practicing</h1>
+          <p>"Curabitur vitae libero in ipsum porttitir consequat. Aliquam it commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
+          <p id="hiring">Emanuel, Sr Strategist at Hiring.com</p>
+      </div>
+
+      <div class="practice-right">
+
+        <div class="event">
+          <div class="event-img">
+            <img  src=".\resources\images\information-orientation.jpg">
+          </div>
+          <div class="event-img-mobile">
+            <img  src=".\resources\images\information-orientation-mobile.jpg">
+          </div>
+          <div class="event-info">
+            <h3>Orientation date</h3>
+            <p>Tue 10/11 & Wed 10/12: 8am-3pm<br> <br></p>
+            <a class="fade" href="#">Read more</a>
+          </div>
+        </div>
+
+        <div class="event">
+          <div class="event-img">
+            <img  src=".\resources\images\information-campus.jpg">
+          </div>
+          <div class="event-img-mobile">
+            <img  src=".\resources\images\information-campus-mobile.jpg">
+          </div>
+          <div class="event-info">
+            <h3>Our campus</h3>
+            <p>Find which campus is close by you<br> <br></p>
+            <a class="fade" href="#">Read more</a>
+          </div>
+        </div>
+
+        <div class="event">
+          <div class="event-img">
+            <img  src=".\resources\images\information-guest-lecture.jpg">
+          </div>
+          <div class="event-img-mobile">
+            <img  src=".\resources\images\information-guest-lecture-mobile.jpg">
+          </div>
+          <div class="event-info">
+            <h3>Our guest lecture</h3>
+            <p>Join a keynote with Oliver Sack<br>about music in medical treatment<br></p>
+            <a class="fade" href="#">Read more</a>
+          </div>
+        </div>
+
+
+      </div>
+    </div>
+
+
+
+    <div class = "programs-offered">
+    </div>
+
+
+
+    <div class = "thesis-exibit">
+    </div>
+
+  </main>
+  <footer>
+  </footer>
 
   </body>
 </html>
