--- a/index.html
+++ b/index.html
@@ -101,14 +101,116 @@
 
 
 
-    <div class = "programs-offered">
+    <div class = "start-learning">
+      <h1>Start learning</h1>
+      <div class="courses">
+
+        <div class="course">
+          <div class="course-img-name">
+            <div class="course-img">
+              <img src=".\resources\images\course-software.jpg">
+            </div>
+            <h2>Software engineering</h2>
+            <h3>COURSES</h3>
+          </div>
+          <h4>Web Development, Mobile Development, iOT, APIs</h4>
+        </div>
+
+
+        <div class="course">
+          <div class="course-img-name">
+            <div class="course-img">
+              <img src=".\resources\images\course-computer-art.jpg">
+            </div>
+            <h2>Computer Art</h2>
+            <h3>COURSES</h3>
+          </div>
+          <h4>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</h4>
+        </div>
+
+
+        <div class="course">
+          <div class="course-img-name">
+            <div class="course-img">
+              <img src=".\resources\images\course-design.jpg">
+            </div>
+            <h2>Design</h2>
+            <h3>COURSES</h3>
+          </div>
+          <h4>User Experience Design, User Research, Visual Design</h4>
+        </div>
+
+        <div class="course">
+          <div class="course-img-name">
+            <div class="course-img">
+              <img src=".\resources\images\course-data.jpg">
+            </div>
+            <h2>Data</h2>
+            <h3>COURSES</h3>
+          </div>
+          <h4>Data Science, Big Data, SQL, DAta Visualization</h4>
+        </div>
+
+        <div class="course">
+          <div class="course-img-name">
+            <div class="course-img">
+              <img src=".\resources\images\course-business.jpg">
+            </div>
+            <h2>Business</h2>
+            <h3>COURSES</h3>
+          </div>
+          <h4>Product Development, Business Development, Startup</h4>
+        </div>
+
+        <div class="course">
+          <div class="course-img-name">
+            <div class="course-img">
+              <img src=".\resources\images\course-marketing.jpg">
+            </div>
+            <h2>Marketing</h2>
+            <h3>COURSES</h3>
+          </div>
+          <h4>Analytics, Content Marketing, Mobile Marketing</h4>
+        </div>
+
+      </div>
     </div>
 
 
 
-    <div class = "thesis-exibit">
-    </div>
+    <div class = "thesis-exhibit">
+      <h1>Thesis exhibit</h1>
+      <div class="thesis-left">
+        <video width=100%  controls>
+          <source src=".\resources\videos\thesis.mp4" type="video/mp4">
+            Your browser does not support this video tag.
+        </video>
+        <h2>Reimagine urban</h2>
+        <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur doloc consequat, tristique ligula."</p>
+      </div>
 
+
+
+      <div class = "thesis-right">
+        <div class="fisma">
+          <img src=".\resources\images\thesis-fisma.jpg">
+          <div class="thesis-info">
+            <h2>Fisma: Design and</h2>
+            <p>Designer showcase of new prototype product</p>
+          </div>
+        </div>
+
+        <div class ="fisma">
+          <img src=".\resources\images\thesis-now-and-then.jpg">
+          <div class="thesis-info">
+            <h2>Now and then</h2>
+            <p>Research study about New York</p>
+          </div>
+        </div>
+      </div>
+
+
+    </div>
   </main>
   <footer>
   </footer>
