final first draft

--- a/index.html
+++ b/index.html
@@ -213,6 +213,13 @@
     </div>
   </main>
   <footer>
+    <div class = "copyright">
+      <h5>© 2016 Colmar Academy. All right reserved</h5>
+    </div>
+    <div class="terms">
+      <h5 class = "fade">Terms</h5>
+      <h5 class = "fade">Privacy</h5>
+    </div>
   </footer>
 
   </body>
